--- a/src/main/resources/templates/front-end/member_sidebar.html
+++ b/src/main/resources/templates/front-end/member_sidebar.html
@@ -36,7 +36,7 @@
 
 				<nav class="mainmenu-nav">
 					<ul class="dashboard-mainmenu rbt-default-sidebar-list">
-						<li><a href="settings"><i
+						<li><a href="/socialpost/settings"><i
 								class="feather-settings"></i><span>設定</span></a></li>
 						<li><a href=""><i class="feather-log-out"  name="logout-post-btn"></i><span>登出</span></a></li>
 					</ul>
