--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -324,36 +324,36 @@
 	<script th:src="@{/js/mok/mok_opinion.js}"></script>
 
 	<script>
-                $(document).ready(function() {
-                    console.log($('.scroll-animation.scroll-right-left'))
-                    const imgText = [
-                        {
-                            src:'https://i.pinimg.com/564x/96/ab/74/96ab74e38ceba1e678ccf2132c93f273.jpg',
-                            text:'就是要你'
-                        },
-                        {
-                            src:'https://i.pinimg.com/564x/a9/5c/ea/a95ceaef7caf10e0dfa883fa5073c533.jpg',
-                            text:'鳩引餓死'
-                        }
-                    ]
-        for(let index in imgText){
-        $('.scroll-animation.scroll-right-left').append(`<div class="single-column-20 bg-theme-gradient-odd" style="width: 470px; height: 450px; background-size: contain; background-repeat: no-repeat; background-position: center center;">
-                            <div class="rbt-testimonial-box style-2">
-                                <div class="img-test">
-                                    <img src=${imgText[index].src} style="width: 470px; height: 450px;" alt="Clint Images">
-                                </div>
-                            </div>
-                        </div>`);
-    }
-        });
+//                 $(document).ready(function() {
+//                     console.log($('.scroll-animation.scroll-right-left'))
+//                     const imgText = [
+//                         {
+//                             src:'https://i.pinimg.com/564x/96/ab/74/96ab74e38ceba1e678ccf2132c93f273.jpg',
+//                             text:'就是要你'
+//                         },
+//                         {
+//                             src:'https://i.pinimg.com/564x/a9/5c/ea/a95ceaef7caf10e0dfa883fa5073c533.jpg',
+//                             text:'鳩引餓死'
+//                         }
+//                     ]
+//         for(let index in imgText){
+//         $('.scroll-animation.scroll-right-left').append(`<div class="single-column-20 bg-theme-gradient-odd" style="width: 470px; height: 450px; background-size: contain; background-repeat: no-repeat; background-position: center center;">
+//                             <div class="rbt-testimonial-box style-2">
+//                                 <div class="img-test">
+//                                     <img src=${imgText[index].src} style="width: 470px; height: 450px;" alt="Clint Images">
+//                                 </div>
+//                             </div>
+//                         </div>`);
+//     }
+//         });
         // 可以在這邊寫這一個頁面的jquery
     </script>
 
 
 	<script>
-    $(".mainmenu-sub").on("mouseenter mouseleave",function(){
-        $(this).find("a").toggleClass("mainmenu-sub-active");
-    });
+//     $(".mainmenu-sub").on("mouseenter mouseleave",function(){
+//         $(this).find("a").toggleClass("mainmenu-sub-active");
+//     });
 
 
 </script>
