--- a/src/main/resources/templates/front-end/footer.html
+++ b/src/main/resources/templates/front-end/footer.html
@@ -6,7 +6,7 @@
                         <div class="footer-widget">
                             <div class="logo">
                                 <a href="index.html">
-                                    <img th:src="@{/assets/images/logo/logo.png}" alt="Edu-cause">
+                                    <img th:src="@{/assets/images/logo/fitanywhere.png}" alt="Edu-cause">
                                 </a>
                             </div>
 
@@ -54,9 +54,9 @@
                                 <li>
                                     <a href="04-kindergarten.html">討論區</a>
                                 </li>
-                                <li>
-                                    <a href="13-university-classic.html">TDEE / FFMI計算公式</a>
-                                </li>
+<!--                                 <li> -->
+<!--                                     <a href="13-university-classic.html">TDEE / FFMI計算公式</a> -->
+<!--                                 </li> -->
                                 
                             </ul>
                         </div>
@@ -135,12 +135,12 @@
                         <p class="rbt-link-hover text-center text-lg-start">Copyright © 2024 <a href="#">fitanywhere.</a> All Rights Reserved</p>
                     </div>
                     <div class="col-xxl-6 col-xl-6 col-lg-6 col-md-12 col-12">
-                        <ul class="copyright-link rbt-link-hover justify-content-center justify-content-lg-end mt_sm--10 mt_md--10">
-                            <!-- <li><a href="#">Terms of service</a></li> -->
-                            <li><a href="#">Privacy policy</a></li>
-                            <!-- <li><a href="#">Subscription</a></li> -->
-                            <li><a href="#">Login & Register</a></li>
-                        </ul>
+<!--                         <ul class="copyright-link rbt-link-hover justify-content-center justify-content-lg-end mt_sm--10 mt_md--10"> -->
+<!--                             <li><a href="#">Terms of service</a></li> -->
+<!--                             <li><a href="#">Privacy policy</a></li> -->
+<!--                             <li><a href="#">Subscription</a></li> -->
+<!--                             <li><a href="#">Login & Register</a></li> -->
+<!--                         </ul> -->
                     </div>
                 </div>
             </div>
