--- a/src/main/resources/templates/front-end/header_before_login.html
+++ b/src/main/resources/templates/front-end/header_before_login.html
@@ -8,7 +8,7 @@
                     <div class="header-info">
                         <div class="logo">
                             <a href="index.html">
-                                <img th:src="@{/assets/images/logo/logo.png}" alt="Education Logo Images">
+                                <img th:src="@{/assets/images/logo/fitanywhere.png}" alt="Education Logo Images">
                             </a>
                         </div>
                     </div>
@@ -42,12 +42,12 @@
                                 </a>
 
                             </li>
-                            <li class="has-dropdown has-menu-child-item">
-                                <a href="#">TDEE／FFMI 計算公式
-<!--                                    <i class="feather-chevron-down"></i>-->
-                                </a>
+<!--                             <li class="has-dropdown has-menu-child-item"> -->
+<!--                                 <a href="#">TDEE／FFMI 計算公式 -->
+<!-- <!--                                    <i class="feather-chevron-down"></i>-->
+<!--                                 </a> -->
 
-                            </li>
+<!--                             </li> -->
 
                         </ul>
                     </nav>
