--- a/src/main/resources/templates/front-end/news/news.html
+++ b/src/main/resources/templates/front-end/news/news.html
@@ -1591,35 +1591,37 @@ td:nth-child(2) {
 	<!-- JS
 ============================================ -->
 	<!-- Modernizer JS -->
-	<script src="assets/js/vendor/modernizr.min.js"></script>
+	<script th:src="@{/js/vendor/modernizr.min.js}"></script>
 	<!-- jQuery JS -->
-	<script src="assets/js/vendor/jquery.js"></script>
+	<script th:src="@{/js/vendor/jquery.js}"></script>
 	<!-- Bootstrap JS -->
-	<script src="assets/js/vendor/bootstrap.min.js"></script>
+	<script th:src="@{/js/vendor/bootstrap.min.js}"></script>
 	<!-- sal.js -->
-	<script src="assets/js/vendor/sal.js"></script>
-	<script src="assets/js/vendor/swiper.js"></script>
-	<script src="assets/js/vendor/magnify.min.js"></script>
-	<script src="assets/js/vendor/jquery-appear.js"></script>
-	<script src="assets/js/vendor/odometer.js"></script>
-	<script src="assets/js/vendor/backtotop.js"></script>
-	<script src="assets/js/vendor/isotop.js"></script>
-	<script src="assets/js/vendor/imageloaded.js"></script>
+	<script th:src="@{/js/vendor/sal.js}"></script>
+	<script th:src="@{/js/vendor/swiper.js}"></script>
+	<script th:src="@{/js/vendor/magnify.min.js}"></script>
+	<script th:src="@{/js/vendor/jquery-appear.js}"></script>
+	<script th:src="@{/js/vendor/odometer.js}"></script>
+	<script th:src="@{/js/vendor/backtotop.js}"></script>
+	<script th:src="@{/js/vendor/isotop.js}"></script>
+	<script th:src="@{/js/vendor/imageloaded.js}"></script>
 
-	<script src="assets/js/vendor/wow.js"></script>
-	<script src="assets/js/vendor/waypoint.min.js"></script>
-	<script src="assets/js/vendor/easypie.js"></script>
-	<script src="assets/js/vendor/text-type.js"></script>
-	<script src="assets/js/vendor/jquery-one-page-nav.js"></script>
-	<script src="assets/js/vendor/bootstrap-select.min.js"></script>
-	<script src="assets/js/vendor/jquery-ui.js"></script>
-	<script src="assets/js/vendor/magnify-popup.min.js"></script>
-	<script src="assets/js/vendor/paralax-scroll.js"></script>
-	<script src="assets/js/vendor/paralax.min.js"></script>
-	<script src="assets/js/vendor/countdown.js"></script>
-	<script src="assets/js/vendor/plyr.js"></script>
+	<script th:src="@{/js/vendor/wow.js}"></script>
+	<script th:src="@{/js/vendor/waypoint.min.js}"></script>
+	<script th:src="@{/js/vendor/easypie.js}"></script>
+	<script th:src="@{/js/vendor/text-type.js}"></script>
+	<script th:src="@{/js/vendor/jquery-one-page-nav.js}"></script>
+	<script th:src="@{/js/vendor/bootstrap-select.min.js}"></script>
+	<script th:src="@{/js/vendor/jquery-ui.js}"></script>
+	<script th:src="@{/js/vendor/magnify-popup.min.js}"></script>
+	<script th:src="@{/js/vendor/paralax-scroll.js}"></script>
+	<script th:src="@{/js/vendor/paralax.min.js}"></script>
+	<script th:src="@{/js/vendor/countdown.js}"></script>
+	<script th:src="@{/js/vendor/plyr.js}"></script>
 	<!-- Main JS -->
-	<script src="assets/js/main.js"></script>
+	<script th:src="@{/js/main.js}"></script>
+	<script th:src="@{/js/social_post.js}"></script>
+	<script th:src="@{/js/mok/mok_opinion.js}"></script>
 </body>
 
 </html>
