--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -93,10 +93,14 @@
 						</span>
 					</div>
 					<div class="thumbnail">
-						<a href="single-product.html"><img
-							th:if="${courseVO.base64CrCover != null}"
-							th:src="'data:image/jpeg;base64,' + ${courseVO.base64CrCover}"
-							alt="Card image"></a>
+						<a href="single-product.html">
+<!-- 						<img -->
+<!-- 							th:if="${courseVO.base64CrCover != null}" -->
+<!-- 							th:src="'data:image/jpeg;base64,' + ${courseVO.base64CrCover}" -->
+<!-- 							alt="Card image"> -->
+							<img src="">
+							
+							</a>
 					</div>
 					<div class="content">
 					
