改搜尋成員 預設圖 不要在 controller 處理
課程只搜尋 只有狀態為 1 的 課程

--- a/src/main/resources/templates/front-end/socialpost/student_socialpost.html
+++ b/src/main/resources/templates/front-end/socialpost/student_socialpost.html
@@ -110,9 +110,11 @@ display:none;
 										th:each="user : ${matchingUsers}">
 										<img
 											th:src="@{/socialpost/UserPhotoDBGifReader} + '?uId=' + ${user.uId}"
-											alt=""> <a
+											alt=""> 
+											<a
 											th:href="@{'/socialpost/nav_to_social_member/' + ${user.uId}}"><p
-												th:text="${user.uNickname}">王小明</p></a> <span
+												th:text="${user.uNickname}">王小明</p></a> 
+												<span
 											th:text="${user.uId}" class="user-uid"></span>
 									</div>
 
