debug about list is null

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1093,7 +1093,7 @@
                     console.log($('.scroll-animation.scroll-right-left'))
                     const imgText = [
                         {
-                            src:'https://i.pinimg.com/564x/96/ab/74/96ab74e38ceba1e678ccf2132c93f273.jpg',
+                            src:'assets/images/client/joinus.jpg',
                             text:'就是要你'
                         },
                         {
