--- a/src/main/resources/templates/front-end/header_moblie.html
+++ b/src/main/resources/templates/front-end/header_moblie.html
@@ -3,7 +3,7 @@
 		<div class="inner-top">
 			<div class="content">
 				<div class="logo">
-					<a href="index.html">  <img th:src="@{/assets/images/logo/fitanywhere.png}" alt="Education Logo Images">
+					<a href="/">  <img th:src="@{/assets/images/logo/fitanywhere.png}" alt="Education Logo Images">
 					</a>
 				</div>
 				<div class="rbt-btn-close">
@@ -16,14 +16,14 @@
 
 		<nav class="mainmenu-nav">
 			<ul class="mainmenu">
-				<li class="with-megamenu has-menu-child-item position-static">
-					<a href="#">首頁 </a>
+				<li class=" position-static">
+					<a href="/">首頁 </a>
 				</li>
 
-				<li class="with-megamenu has-menu-child-item"><a href="/course/courses">課程
+				<li class=""><a href="/course/courses">課程
 				</a></li>
 
-				<li class="has-dropdown has-menu-child-item"><a href="/forumpost/listAllForumPost">討論區
+				<li class=""><a href="/forumpost/listAllForumPost">討論區
 				</a></li>
 
 <!-- 				<li class="with-megamenu has-menu-child-item position-static"> -->
