--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -386,7 +386,7 @@ $(document).ready(function() {
                 let image_cover = URL.createObjectURL(blob);
                 // console.log(image_cover);
                 let this_e = $(this);
-                // console.log(this_e)
+                console.log(this_e)
                 $(this).attr('src', image_cover);
             })
             .catch(error => {
